--- a/app/templates/books.html
+++ b/app/templates/books.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <title>Усі книги</title>
     <!-- <link rel="stylesheet" href="/static/styles.css"> -->
 </head>
@@ -73,6 +74,12 @@
         <h1>Усі книги</h1>
     </center>
 
+    {% if message %}
+        <div class="alert alert-success mt-3" role="alert">
+            {{ message }}
+        </div>
+    {% endif %}
+
     {% if books %}
         <ul class="book-list">
             {% for book in books %}
@@ -90,5 +97,7 @@
     {% endif %}
     <a href="{{url_for('new_user_form')}}" class="add-book-link">Реєстрація</a>
 
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
